--- a/auctions/templates/auctions/create.html
+++ b/auctions/templates/auctions/create.html
@@ -9,11 +9,11 @@
 {% block body %}
   <form action="{% url 'create' %}" method="post" style="display:flex;flex-direction:column;align-items:flex-start;">
     {% csrf_token %}
-    <input type="text" name="title" placeholder="Title">
-    <textarea name="description" placeholder="Description" cols="30" rows="3"></textarea>
-    <input type="number" step="0.1" min=0 name="bid" placeholder="Starting Bid">
+    <input type="text" name="title" placeholder="Title" required>
+    <textarea name="description" placeholder="Description" cols="30" rows="3" required></textarea>
+    <input type="number" step="0.1" min=0 name="bid" placeholder="Starting Bid" required>
     <input type="url" name="image_url" placeholder="Image URL">
-    <select name="category" >
+    <select name="category" required>
       
       {% for category in categories %}
         <option value={{category.title}}>{{category.title}}</option>
