--- a/auctions/templates/auctions/listing.html
+++ b/auctions/templates/auctions/listing.html
@@ -29,6 +29,12 @@
       
       {% if latest_bid.bidder == user %}
         <span>by you</span>
+        <span>
+          <form class="remove_watchlist" method="post" action="{% url 'remove_watchlist' listing.id %}">
+            {% csrf_token %}
+            <button type="submit">Remove from Watchlist</button>
+          </form>
+        </span>
       {% else %}
         <span>by {{latest_bid.bidder}}</span>
       {% endif %}
@@ -37,12 +43,18 @@
       <strong>Current Bid: </strong>No bids yet, be the first to bid.
     {% endif %}
       
+    
+    {% if user.is_authenticated %}
     <form class="bid" action="{% url 'add_bid' listing.id %}" method="post">
       {% csrf_token %}
       <br>
       <input type="number" step="0.1" min=0 name="bid" placeholder="Place your bid" required>
       <button type="submit">Add to Watchlist</button>
     </form>
+      {% else %}
+      <h2>Log in to bid on this item</h2>
+    {% endif %}
+      
   </div>
   
   {% if message %}
