--- a/auctions/templates/auctions/category.html
+++ b/auctions/templates/auctions/category.html
@@ -2,27 +2,41 @@
 {% load static %}
 
 
+{% block title %}
+    {{category.title}}
+{% endblock title %}
+    
+
 {% block body %}
-  <h1>
-    {{category}}
-  </h1>
   
-  {% for listing in listings %}
-    <div class="container">
-      <div class="image">
-          <img src="{{listing.image_url}}" alt="{{listing.title}}">
-      </div>
-      <div class="info">
-          <h5>
-              <a href="{% url 'listing' listing.id %}">
-                  {{listing.title}}
-              </a>
-          </h5>
-          <p>{{listing.description|truncatechars:15 }}</p>
-          <span>${{listing.starting_bid}}</span>
-      </div>
+  <div class="container">
+    <h2 class="mb-4">{{category}}</h2>
+    {% for listing in listings %}
+    <div class="listing border rounded shadow-sm p-3 mb-2 row">
+        <div class="col-lg-3 image">
+            <img src="{{listing.image_url}}" alt="{{listing.title}}">
+        </div>
+        <div class="col-lg-9 info">
+            <h3>
+                <a class="text-decoration-none" href="{% url 'listing' listing.id %}">
+                    {{listing.title}}
+                </a>
+            </h3>
+            
+            <p><strong>Description: </strong>{{listing.description|truncatechars:15 }}</p>
+            <p><strong>Starting bid: </strong>${{listing.starting_bid}}</p>
+            <p><strong>Created: </strong>{{listing.created_date}}</p>
+        </div>
     </div>
-  {% endfor %}
+    
+    {% empty %}
+    <h4>No listings in this category yet</h4>
+    <h5>Add one 
+      <span><a href="{% url 'create' %}">here</a></span>
+    </h5>
+
+    {% endfor %}
+</div>
     
 {% endblock body %}
   
