--- a/auctions/templates/auctions/create.html
+++ b/auctions/templates/auctions/create.html
@@ -5,21 +5,33 @@
 {% endblock title %}
 
 {% block body %}
-  <form action="{% url 'create' %}" method="post" style="display:flex;flex-direction:column;align-items:flex-start;">
-    {% csrf_token %}
-    <input type="text" name="title" placeholder="Title" required>
-    <textarea name="description" placeholder="Description" cols="30" rows="3" required></textarea>
-    <input type="number" step="0.1" min=0 name="bid" placeholder="Starting Bid" required>
-    <input type="url" name="image_url" placeholder="Image URL">
-    <select name="category" required>
-      
-      {% for category in categories %}
-        <option value={{category.title}}>{{category.title}}</option>
-      {% endfor %}
-        
-    </select>
-    <input type="submit">
-  </form>
+  
+  <div class="card m-auto" style="width: 30rem;">
+    <h5 class="card-header">Create new listing</h5>
+
+    <div class="card-body p-4">
+
+      <form action="{% url 'create' %}" method="post" style="display:flex;flex-direction:column;align-items:flex-start;">
+        {% csrf_token %}
+        <input class="form-control mb-2" type="text" name="title" placeholder="Title" required>
+        <textarea class="form-control mb-2" name="description" placeholder="Description" cols="30" rows="3" required></textarea>
+        <input class="form-control mb-2" type="number" step="0.1" min=0 name="bid" placeholder="Starting Bid" required>
+        <input class="form-control mb-2" type="url" name="image_url" placeholder="Image URL">
+        <select class="form-select mb-2" name="category" required>
+          
+          <option value="Other" selected>Choose a category</option>
+          {% for category in categories %}
+            <option value={{category.title}}>{{category.title}}</option>
+          {% endfor %}
+            
+        </select>
+        <input class="btn btn-primary" type="submit">
+      </form>
+
+    </div>
+  </div>
+
+
 
   {% if message %}
     {{ message }}
