--- a/auctions/templates/auctions/login.html
+++ b/auctions/templates/auctions/login.html
@@ -1,12 +1,10 @@
 {% extends "auctions/layout.html" %}
 
-{% block body %}
+{% block title %}
+    Login
+{% endblock title %}
 
-    
-    {% block title %}
-        Login
-    {% endblock title %}
-        
+{% block body %}
 
     <h2>Login</h2>
 
@@ -16,10 +14,10 @@
 
     <form action="{% url 'login' %}" method="post">
         {% csrf_token %}
-        <div class="form-group">
+        <div class="form-group mb-2">
             <input autofocus class="form-control" type="text" name="username" placeholder="Username">
         </div>
-        <div class="form-group">
+        <div class="form-group mb-2">
             <input class="form-control" type="password" name="password" placeholder="Password">
         </div>
         <input class="btn btn-primary" type="submit" value="Login">
